# CLionProjects

./: README.md
Lab10/: CMakeLists.txt  main.cpp
Lab10_List/: CMakeLists.txt  main.cpp
Lab11/: CMakeLists.txt  main.cpp
Lab2/: CMakeLists.txt  main.cpp
Lab5Benchmark/: CMakeLists.txt  main.cpp
Lab6/: CMakeLists.txt  main.cpp
Lab7.2/: CMakeLists.txt  main.cpp
Lab8/: CMakeLists.txt  Nostromo  main.cpp
Lab8BST/: CMakeLists.txt  main.cpp
Lab8_3/: CMakeLists.txt  main.cpp
Lab9/: main.cpp
lab5/: CMakeLists.txt  main.cpp
